syntax = "proto3";
option go_package = "distsys/grpc-prog/myuber/comm";
package comm;

// Rider APIs
service RiderService {
    rpc RequestRide(RideRequest) returns (RideResponse);
    rpc GetStatus(RideStatusRequest) returns (RideStatusResponse);
}

message RideRequest {
    string rider = 1;
    string start_location = 2;
    string end_location = 3;
}

message RideResponse {
    string ride_id = 1;
    bool success = 2;
}

message RideStatusRequest {
    string ride_id = 1;
}

message RideStatusResponse {
    string status = 1;
    int32 numRejections = 2;
    string driver = 3;
    bool success = 4;
}

// Driver APIs
service DriverService {
    rpc AssignDriver(DriverAssignmentRequest) returns (DriverAssignmentResponse);
    rpc CompleteRideRequest(DriverCompleteRequest) returns (DriverCompleteResponse);
    rpc AcceptRideRequest(DriverAcceptRequest) returns (DriverAcceptResponse);
    rpc RejectRideRequest(DriverRejectRequest) returns (DriverRejectResponse);
    rpc TimeoutRideRequest(DriverTimeoutRequest) returns (DriverTimeoutResponse);
}

message DriverAssignmentRequest {
    string driver = 1;
}

message DriverAssignmentResponse {
    string ride_id = 1;
    string rider = 2;
    string start_location = 3;
    string end_location = 4;
    int32 numRejections = 5;
    bool success = 6;
}

message DriverAcceptRequest {
    string ride_id = 1;
    string driver = 2;
}

message DriverAcceptResponse {
    bool success = 1;
}

message DriverRejectRequest {
    string ride_id = 1;
}

message DriverRejectResponse {
    bool success = 1;
}

message DriverCompleteRequest {
    string ride_id = 1;
}

message DriverCompleteResponse {
    bool success = 1;
}

message DriverTimeoutRequest {
    string ride_id = 1;
}

message DriverTimeoutResponse {
    bool success = 1;
}

